Fixed chat input resizing bug where it wouldn't shrink after posting. Also made it hit a max size and display scrollbar at a certain point

--- a/src/ChatInput.css
+++ b/src/ChatInput.css
@@ -17,6 +17,8 @@
     box-sizing: border-box;
     overflow: hidden;
     overflow-wrap: break-word;
+    max-height: 115px;
+    overflow-y: auto;
 }
 
 .chat-input > textarea:focus {
